--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -24,6 +24,7 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragment_container_view"
         android:layout_width="match_parent"
+        android:background="?attr/colorPrimary"
         android:layout_height="match_parent" />
 
 </LinearLayout>
