--- a/app/src/main/res/layout/activity_notes_list_view.xml
+++ b/app/src/main/res/layout/activity_notes_list_view.xml
@@ -99,7 +99,6 @@
             android:id="@+id/swiperefreshlayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/bg_normal"
             tools:context="it.niedermann.owncloud.notes.android.activity.NotesListViewActivity">
 
             <FrameLayout
@@ -115,13 +114,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:indeterminateTint="@color/defaultBrand"
+                    tools:targetApi="lollipop"
                     tools:visibility="gone" />
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recycler_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/bg_highlighted"
                     android:scrollbars="vertical"
                     tools:listitem="@layout/item_notes_list_note_item" />
             </FrameLayout>
