--- a/app/src/main/res/layout/drawer_layout.xml
+++ b/app/src/main/res/layout/drawer_layout.xml
@@ -33,13 +33,13 @@
                 <RelativeLayout
                     android:id="@+id/header_view"
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
+                    android:layout_height="@dimen/drawer_header_height"
                     android:background="@color/defaultBrand">
 
                     <androidx.appcompat.widget.AppCompatImageView
                         android:id="@+id/logo"
-                        android:layout_width="42dp"
-                        android:layout_height="42dp"
+                        android:layout_width="@dimen/drawer_header_logo_size"
+                        android:layout_height="@dimen/drawer_header_logo_size"
                         android:layout_centerVertical="true"
                         android:layout_margin="@dimen/spacer_2x"
                         android:gravity="center"
@@ -64,8 +64,8 @@
                     android:id="@+id/navigationList"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingTop="8dp"
-                    android:paddingBottom="8dp"
+                    android:paddingTop="@dimen/spacer_1x"
+                    android:paddingBottom="@dimen/spacer_1x"
                     app:layoutManager="LinearLayoutManager"
                     tools:itemCount="6"
                     tools:listitem="@layout/item_navigation" />
@@ -74,8 +74,8 @@
                     android:id="@+id/navigationMenu"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingTop="8dp"
-                    android:paddingBottom="8dp"
+                    android:paddingTop="@dimen/spacer_1x"
+                    android:paddingBottom="@dimen/spacer_1x"
                     app:layoutManager="LinearLayoutManager"
                     tools:itemCount="3"
                     tools:listitem="@layout/item_navigation" />
