--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,6 +7,10 @@
     <dimen name="spacer_2x">16dp</dimen>
     <dimen name="spacer_3x">24dp</dimen>
 
+    <!-- Drawer header -->
+    <dimen name="drawer_header_height">100dp</dimen>
+    <dimen name="drawer_header_logo_size">42dp</dimen>
+
     <!-- Buttons -->
     <dimen name="button_padding">@dimen/spacer_2x</dimen>
 
