Apply spacer variables instead of using direct values

--- a/app/src/main/res/layout/activity_exception.xml
+++ b/app/src/main/res/layout/activity_exception.xml
@@ -30,12 +30,12 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginStart="@dimen/spacer_2x"
-        android:layout_marginLeft="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginLeft="@dimen/spacer_2x"
+        android:layout_marginEnd="@dimen/spacer_2x"
+        android:layout_marginRight="@dimen/spacer_2x"
         android:layout_weight="1"
         android:background="@color/bg_highlighted"
-        android:padding="8dp"
+        android:padding="@dimen/spacer_1x"
         android:scrollbars="horizontal|vertical"
         android:textIsSelectable="true"
         android:typeface="monospace"
@@ -45,7 +45,7 @@
         style="?android:buttonBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_margin="@dimen/spacer_2x"
         android:gravity="end"
         android:orientation="horizontal"
         android:weightSum="1.0">
