--- a/app/src/main/res/layout/item_pref.xml
+++ b/app/src/main/res/layout/item_pref.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:contentDescription="@null"
-        android:padding="16dp"
+        android:padding="@dimen/spacer_2x"
         tools:src="@drawable/ic_settings_grey600_24dp" />
 
     <LinearLayout
@@ -48,6 +48,6 @@
         android:layout_height="match_parent"
         android:gravity="center_vertical"
         android:orientation="vertical"
-        android:padding="16dp" />
+        android:padding="@dimen/spacer_2x" />
 
 </LinearLayout>
