--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -38,4 +38,6 @@
     <dimen name="widget_note_list_fav_icon_height">20dp</dimen>
     <dimen name="header_padding">16dp</dimen>
     <dimen name="avatar_size">64dp</dimen>
+
+    <dimen name="item_section_padding_top">48dp</dimen>
 </resources>
