--- a/app/src/main/res/layout/widget_note_list_dark.xml
+++ b/app/src/main/res/layout/widget_note_list_dark.xml
@@ -9,6 +9,7 @@
 
     <!-- Widget header -->
     <RelativeLayout
+        android:id="@+id/widget_note_header_dark"
         android:layout_width="match_parent"
         android:layout_height="@dimen/widget_note_list_header_height"
         android:background="@drawable/ic_launcher_background"
