--- a/app/src/main/res/layout/item_notes_list_note_item_without_excerpt.xml
+++ b/app/src/main/res/layout/item_notes_list_note_item_without_excerpt.xml
@@ -64,6 +64,8 @@
             android:id="@+id/noteTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10sp"
+            android:layout_marginBottom="10sp"
             android:layout_weight="1"
             android:ellipsize="end"
             android:maxLines="1"
@@ -79,6 +81,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/spacer_1x"
             android:layout_marginLeft="@dimen/spacer_1x"
+            android:layout_marginTop="1dp"
             android:layout_marginEnd="@dimen/spacer_2x"
             android:layout_marginRight="@dimen/spacer_2x"
             android:background="@drawable/border"
