--- a/app/src/main/res/layout/item_notes_list_note_item_grid.xml
+++ b/app/src/main/res/layout/item_notes_list_note_item_grid.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/spacer_2x"
             android:layout_marginLeft="@dimen/spacer_2x"
-            android:layout_marginTop="@dimen/spacer_2x"
+            android:layout_marginTop="@dimen/spacer_1x"
             android:background="@drawable/border"
             android:maxLines="1"
             android:paddingLeft="@dimen/spacer_1x"
@@ -35,6 +35,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/spacer_1x"
             android:gravity="center_vertical|end"
             android:orientation="horizontal">
 
@@ -45,7 +46,6 @@
                 android:layout_weight="1"
                 android:paddingStart="@dimen/spacer_2x"
                 android:paddingLeft="@dimen/spacer_2x"
-                android:paddingTop="@dimen/spacer_2x"
                 android:paddingEnd="@dimen/spacer_2x"
                 android:paddingRight="@dimen/spacer_2x"
                 android:textAppearance="?android:attr/textAppearanceMedium"
@@ -58,7 +58,7 @@
 
             <FrameLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent">
 
                 <ImageView
                     android:id="@+id/noteFavorite"
@@ -66,7 +66,10 @@
                     android:layout_height="match_parent"
                     android:background="?attr/selectableItemBackgroundBorderless"
                     android:contentDescription="@string/menu_favorite"
-                    android:padding="@dimen/spacer_2x"
+                    android:paddingStart="@dimen/spacer_2x"
+                    android:paddingLeft="@dimen/spacer_2x"
+                    android:paddingEnd="@dimen/spacer_2x"
+                    android:paddingRight="@dimen/spacer_2x"
                     tools:src="@drawable/ic_star_yellow_24dp" />
 
                 <androidx.appcompat.widget.AppCompatImageView
@@ -86,7 +89,11 @@
             android:id="@+id/noteContent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/spacer_2x"
+            android:paddingStart="@dimen/spacer_2x"
+            android:paddingLeft="@dimen/spacer_2x"
+            android:paddingEnd="@dimen/spacer_2x"
+            android:paddingRight="@dimen/spacer_2x"
+            android:paddingBottom="@dimen/spacer_2x"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="@color/fg_default"
             android:textIsSelectable="true"
