--- a/app/src/main/res/layout/item_notes_list_section_item.xml
+++ b/app/src/main/res/layout/item_notes_list_section_item.xml
@@ -9,15 +9,9 @@
     android:layout_alignParentTop="true"
     android:layout_alignParentEnd="false"
     android:layout_alignParentRight="true"
-    android:background="@color/bg_normal"
     android:ellipsize="end"
     android:gravity="center_vertical"
     android:hint="@string/listview_updated_yesterday"
-    android:paddingStart="56dp"
-    android:paddingLeft="56dp"
-    android:paddingTop="48dp"
-    android:paddingEnd="@dimen/spacer_2x"
-    android:paddingRight="@dimen/spacer_2x"
-    android:paddingBottom="@dimen/spacer_1x"
+    android:padding="@dimen/spacer_1x"
     android:textColor="@color/fg_default_selection"
     android:textSize="@dimen/secondary_font_size" />
