--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,8 @@
     <dimen name="spacer_1x">8dp</dimen>
     <dimen name="spacer_2x">16dp</dimen>
     <dimen name="spacer_3x">24dp</dimen>
+    <dimen name="spacer_5x">40dp</dimen>
+    <dimen name="spacer_6x">48dp</dimen>
 
     <!-- Drawer header -->
     <dimen name="drawer_header_height">100dp</dimen>
