Fix multiselection styling

--- a/app/src/main/res/drawable-v21/grid_item_background_selector.xml
+++ b/app/src/main/res/drawable-v21/grid_item_background_selector.xml
@@ -12,7 +12,7 @@
             </item>
 
             <item>
-                <color android:color="@color/bg_normal" />
+                <color android:color="@android:color/transparent" />
             </item>
         </selector>
     </item>
